Update LaTeX document: modify main.tex, introduction, twsetup.sty and add references.bib

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,8 @@
 \begin{document}
 \input{frontmatter/titlepage}
 \input{sections/introduction}
-\input{sections/math}
-\input{sections/chinese-demo}
+
+\printbibliography[title=參考文獻]
+
+
 \end{document}
