--- a/references.bib
+++ b/references.bib
@@ -1,14 +1,3 @@
-@article{wing2006computational,
-  author = {Wing, Jeannette M.},
-  title = {Computational Thinking},
-  journal = {Communications of the ACM},
-  volume = {49},
-  number = {3},
-  year = {2006},
-  pages = {33--35},
-  doi = {10.1145/1118178.1118215}
-}
-
 @book{guzdial2015learner,
   author = {Guzdial, Mark},
   title = {Learner-Centered Design of Computing Education: Research on Computing for Everyone},
@@ -16,17 +5,6 @@
   publisher = {Morgan \& Claypool Publishers},
   address = {San Rafael, CA},
   doi = {10.2200/S00684ED1V01Y201511HCI033}
-}
-
-@article{zimmerman2002becoming,
-  author = {Zimmerman, Barry J.},
-  title = {Becoming a Self-Regulated Learner: An Overview},
-  journal = {Theory into Practice},
-  volume = {41},
-  number = {2},
-  year = {2002},
-  pages = {64--70},
-  doi = {10.1207/s15430421tip4102_2}
 }
 
 % ========== AI in Programming Education ==========
@@ -37,10 +15,12 @@
   booktitle = {Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},
   series = {CHI '23},
   year = {2023},
+  month = {April},
   location = {Hamburg, Germany},
   publisher = {ACM},
   address = {New York, NY, USA},
-  pages = {455:1--455:23},
+  articleno = {455},
+  numpages = {23},
   doi = {10.1145/3544548.3580919}
 }
 
@@ -50,8 +30,11 @@
   booktitle = {Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems},
   series = {CHI '24},
   year = {2024},
+  month = {May},
   publisher = {ACM},
   address = {New York, NY, USA},
+  articleno = {650},
+  numpages = {20},
   doi = {10.1145/3613904.3642773}
 }
 
@@ -75,6 +58,8 @@
   booktitle = {Proceedings of the 25th Australasian Computing Education Conference},
   series = {ACE '23},
   year = {2023},
+  month = {January},
+  location = {Melbourne, Australia},
   publisher = {ACM},
   address = {New York, NY, USA},
   pages = {97--104},
@@ -114,6 +99,8 @@
   booktitle = {Proceedings of the 54th ACM Technical Symposium on Computer Science Education V. 1},
   series = {SIGCSE '23},
   year = {2023},
+  month = {March},
+  location = {Toronto, ON, Canada},
   publisher = {ACM},
   address = {New York, NY, USA},
   pages = {500--506},
@@ -128,20 +115,11 @@
   year = {2024},
   publisher = {ACM},
   address = {New York, NY, USA},
+  pages = {1--10},
   note = {AI Behavior Analysis Framework}
 }
 
 % ========== Programming Education Foundations ==========
-
-@book{guzdial2015learner,
-  author = {Guzdial, Mark},
-  title = {Learner-Centered Design of Computing Education: Research on Computing for Everyone},
-  series = {Synthesis Lectures on Human-Centered Informatics},
-  year = {2015},
-  publisher = {Morgan \& Claypool Publishers},
-  address = {San Rafael, CA},
-  doi = {10.2200/S00684ED1V01Y201511HCI033}
-}
 
 @article{qian2017misconceptions,
   author = {Qian, Yizhou and Lehman, James},
@@ -264,7 +242,7 @@
 
 % ========== Problem-Based Learning ==========
 
-@book{hmelo2004problem,
+@article{hmelo2004problem,
   author = {Hmelo-Silver, Cindy E.},
   title = {Problem-Based Learning: What and How Do Students Learn?},
   journal = {Educational Psychology Review},
@@ -314,7 +292,7 @@
   author = {{Harvard University}},
   title = {CS50's Introduction to Programming with Python},
   year = {2024},
-  howpublished = {\url{https://cs50.harvard.edu/python/}},
+  url = {https://cs50.harvard.edu/python/},
   note = {Accessed: 2024-11-01}
 }
 
