Update citation style to numeric-comp; add contextual wording around citations; remove stray patch markers; vertically center table cells and add captions; switch grouped citations to render as [n–m].

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,10 @@
 \input{frontmatter/titlepage}
 \input{sections/introduction}
 \input{sections/literature}
+\input{sections/teaching_design}
+\input{sections/research_plan}
+\input{sections/outcomes}
  
 \printbibliography[title=參考文獻]
-  
+   
 \end{document}
