--- a/twsetup.sty
+++ b/twsetup.sty
@@ -69,6 +69,6 @@
   pdfborder={0 0 0}
 }
 
-% Bibliography with biblatex
-\RequirePackage[style=ieee,backend=biber]{biblatex}
+% Bibliography with biblatex (numeric, grouped citations e.g., [3–5])
+\RequirePackage[style=numeric-comp,sorting=none,backend=biber]{biblatex}
 \addbibresource{references.bib}
