--- a/sections/literature.tex
+++ b/sections/literature.tex
@@ -1,14 +1,14 @@
 \section{文獻探討}
 
-本章將文獻探討分為三個層次:第一層討論學習問題與理論基礎,對應研究背景中提出的三大挑戰；
-第二層討論AI鷹架與教學方法,提供本研究教學設計的理論基礎；
-第三層分析現有研究的不足與研究缺口,說明本研究的必要性與獨特貢獻。
+本章將文獻探討分為三個層次：第一層討論學習問題與理論基礎，對應研究背景中提出的三大挑戰；
+第二層討論AI鷹架與教學方法，提供本研究教學設計的理論基礎；
+第三層分析現有研究的不足與研究缺口，說明本研究的必要性與獨特貢獻。
 
-\subsection{第一層:學習問題與理論基礎}
+\subsection{第一層：學習問題與理論基礎}
 
 \subsubsection{非資訊科系學生的程式設計學習困難}
 
-隨著運算思維被視為21世紀核心素養,程式設計教育已從資訊科系專業擴展至通識教育領域。
+隨著運算思維被視為21世紀核心素養，程式設計教育已從資訊科系專業擴展至通識教育領域。
 然而,非資訊背景學生在學習過程中面臨諸多挑戰,這些困難形成了本研究「挑戰一」的背景。
 Guzdial在其《以學習者為中心的運算教育設計》一書中\cite{guzdial2015learner}指出,
 程式設計對非專業學習者而言是一項高度複雜的認知任務,需要特別設計的教學策略以降低學習障礙。
