--- a/sections/teaching_design.tex
+++ b/sections/teaching_design.tex
@@ -7,7 +7,7 @@
 
 \subsection{教學理念與設計原則}
 
-本研究之教學設計以「AI鷹架漸退模式」為核心，融合三大理論框架：自我調節學習理論（Self-Regulated Learning, SRL）\cite{zimmerman2002becoming}、認知學徒制（Cognitive Apprenticeship）\cite{collins1989cognitive}與問題導向學習（Problem-Based Learning, PBL）\cite{savery2006overview}。設計原則如下：
+本研究之教學設計以「AI鷹架漸退模式」為核心，融合三大理論框架：自我調節學習理論（Self-Regulated Learning，SRL）\cite{zimmerman2002becoming}、認知學徒制（Cognitive Apprenticeship）\cite{collins1989cognitive}與問題導向學習（Problem-Based Learning，PBL）\cite{savery2006overview}。設計原則如下：
 
 \textbf{原則一：結構化AI支持}
 
@@ -38,6 +38,13 @@
 運用前9週所學的Python基礎知識，透過真實問題情境與專題實作，培養學生的問題解決能力、知識整合能力與自主學習能力。此部分著重將所學知識應用於實際問題，並逐步撤除AI鷹架，達成研究目標。
 
 課程分為三個教學階段，配合AI鷹架漸退設計：
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.9\linewidth]{teaching_flow.png}
+  \caption{AI鷹架漸退教學模式}
+  \label{fig:teaching_flow}
+\end{figure}
 
 \begin{table}[h]
 \centering
@@ -85,9 +92,9 @@
 \hline
 \textbf{週次} & \textbf{主題} & \textbf{CS50P對應內容} & \textbf{課堂活動} \\
 \hline
-1 & 課程介紹與環境設定 & Week 0: Functions (1/2) & 認識Python、安裝環境、第一支程式 \\
+1 & 課程介紹與環境設定 & Week 0: Functions（1/2） & 認識Python、安裝環境、第一支程式 \\
 \hline
-2 & 變數與資料型別 & Week 0: Variables (2/2) & 變數宣告、資料型別、輸入輸出、前測施測 \\
+2 & 變數與資料型別 & Week 0: Variables（2/2） & 變數宣告、資料型別、輸入輸出、前測施測 \\
 \hline
 3 & 條件判斷 & Week 1: Conditionals & if-elif-else、布林運算、邏輯判斷 \\
 \hline
@@ -168,9 +175,9 @@
 \hline
 \textbf{週次} & \textbf{主題} & \textbf{學習重點} & \textbf{課堂活動} \\
 \hline
-13 & 進階主題(一) & Week 7: Regular Expressions & 正規表示式、文字處理應用 \\
+13 & 進階主題（一） & Week 7: Regular Expressions & 正規表示式、文字處理應用 \\
 \hline
-14 & 進階主題(二) & Week 8: OOP基礎概念 & 類別與物件基本概念（簡化版） \\
+14 & 進階主題（二） & Week 8: OOP基礎概念 & 類別與物件基本概念（簡化版） \\
 \hline
 15 & 期末專題規劃 & 專題設計 & 專題選題、需求分析、架構設計 \\
 \hline
