--- a/twsetup.sty
+++ b/twsetup.sty
@@ -53,6 +53,12 @@
 \RequirePackage{xcolor}
 \RequirePackage{colortbl}
 \definecolor{lightgray}{gray}{0.9}
+% Default table spacing
+\setlength{\tabcolsep}{6pt}
+\renewcommand{\arraystretch}{1.25}
+% Caption spacing for tables
+\RequirePackage{caption}
+\captionsetup[table]{skip=10pt}
 
 % Graphics
 \RequirePackage{graphicx}
