--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -9,9 +9,7 @@
   
   {\LARGE \textbf{計畫名稱}\\[0.8cm]}
   
-  {\Large \textbf{\textcolor{blue}{從「依賴」到「賦能」:自我調節學習導向之 AI 鷹架撤除模式}}\\[0.5cm]}
-  
-  {\large 在非資訊背景學生程式教育之應用\\[1.5cm]}
+  {\Large \textbf{\textcolor{blue}{從「依賴」到「賦能」：自我調節學習導向之 AI 鷹架撤除模式——在非資訊背景學生程式教育之應用}}\\[1.5cm]}
   
   {\large \textbf{學門分類:資訊科技類}\\[3cm]}
   
