--- a/frontmatter/meta.tex
+++ b/frontmatter/meta.tex
@@ -3,4 +3,4 @@
 \author{Author Name}
 \date{\today}
 % Document-specific PDF metadata (override defaults from twsetup)
-\hypersetup{pdfauthor={Author Name}, pdftitle={Sample Document}}
+\hypersetup{pdfauthor={Author Name}， pdftitle={Sample Document}}
