--- a/sections/outcomes.tex
+++ b/sections/outcomes.tex
@@ -3,9 +3,9 @@
 %% 伍、預期完成工作項目與成果
 %% ============================================
 
-\section{預期完成工作項目與成果}
+\subsubsection{預期完成工作項目與成果}
 
-\subsection{研究執行時程}
+\paragraph{研究執行時程}
 
 \begin{longtable}{|c|m{6cm}|m{5.5cm}|}
 \hline
@@ -137,9 +137,9 @@ $\bullet$ 製作教學資源
 \caption{研究執行時程}
 \end{longtable}
 
-\subsection{預期具體成果與KPI}
+\paragraph{預期具體成果與KPI}
 
-\subsubsection{教學成效KPI}
+\paragraph{教學成效KPI}
 
 \begin{table}[h]
 \centering
@@ -162,7 +162,7 @@ SRL能力提升 & 第三次量表分數高於第一次 & 重複量數ANOVA達顯
 \end{tabular}
 \end{table}
 
-\subsubsection{研究產出}
+\paragraph{研究產出}
 
 \begin{enumerate}
 \item \textbf{教學模組}
@@ -190,16 +190,16 @@ SRL能力提升 & 第三次量表分數高於第一次 & 重複量數ANOVA達顯
   \end{itemize}
 \end{enumerate}
 
-\subsection{預期影響與貢獻}
+\paragraph{預期影響與貢獻}
 
-\subsubsection{學術貢獻}
+\paragraph{學術貢獻}
 
 \begin{enumerate}
 \item \textbf{理論貢獻}：發展「AI鷹架漸退教學模式」，整合既有理論脈絡，如認知學徒制\cite{collins1989cognitive}與SRL理論\cite{zimmerman2002becoming}
 \item \textbf{實證貢獻}：提供臺灣高教脈絡下AI輔助程式設計教學的實證資料，以回應相關文獻所指出之本土研究不足\cite{lai2020analysis}
 \end{enumerate}
 
-\subsubsection{實務貢獻}
+\paragraph{實務貢獻}
 
 \begin{enumerate}
 \item \textbf{教學創新}：參考近期系統性研究之啟發\cite{kazemitabaar2024codeaid}，發展可操作的AI鷹架設計原則
@@ -207,7 +207,7 @@ SRL能力提升 & 第三次量表分數高於第一次 & 重複量數ANOVA達顯
 \item \textbf{推廣應用}：開放教學資源供其他教師參考，並回應相關論述所提出的AI時代教育挑戰\cite{becker2023programming}
 \end{enumerate}
 
-\subsubsection{社會影響}
+\paragraph{社會影響}
 
 \begin{enumerate}
 \item 回應運算思維素養之培育需求\cite{wing2006computational}
