--- a/sections/research_plan.tex
+++ b/sections/research_plan.tex
@@ -3,13 +3,13 @@
 %% 肆、研究設計與執行規劃
 %% ============================================
 
-\section{研究設計與執行規劃}
+\subsubsection{研究設計與執行規劃}
 
-\subsection{研究設計}
+\paragraph{研究設計}
 
 本研究採用\textbf{單組前後測準實驗設計}（one-group pretest-posttest quasi-experimental design），參考研究方法學相關論述\cite{creswell2018research}，並以混合方法整合量化與質性資料。分析策略以簡潔可操作為原則，著重核心指標與可重現流程。
 
-\subsubsection{研究問題}
+\paragraph{研究問題}
 
 本研究針對以下四個核心問題進行探討：
 
@@ -20,50 +20,50 @@
 \item \textbf{研究問題四（學習者觀點）}：學生對AI輔助程式設計學習的態度、使用經驗與學習反思為何？
 \end{enumerate}
 
-\subsubsection{研究架構}
+\paragraph{研究架構}
 \begin{itemize}[leftmargin=2em]
 \item \textbf{自變項}：三階段AI鷹架教學介入（引導期→轉換期→自主期）
 \item \textbf{依變項}：Python程式設計能力、AI依賴程度、自我調節學習能力、學習行為模式
 \item \textbf{控制變項}：教學內容、授課教師、上課時數
 \end{itemize}
 
-\subsection{研究對象}
+\paragraph{研究對象}
 
 國立東華大學114學年度第二學期「程式設計與應用」通識課程修課學生，預估50-60人。研究對象為非資訊科系學生，來自人文、理工、管理等不同學院，無程式設計經驗或僅有基礎經驗。
 
-\subsection{研究工具}
+\paragraph{研究工具}
 
-\subsubsection{工具一：Python程式設計能力測驗}
+\paragraph{工具一：Python程式設計能力測驗}
 
 測驗架構參考CS50P課程設計與內容\cite{cs50p2024}，包含選擇題與程式撰寫題，涵蓋理解、應用、分析、創造四個認知層次。僅描述施測方法與題型設計原則，本計畫不進行效度、預試與信度結果報告。
 
-\subsubsection{工具二：AI依賴與自我調節學習量表}
+\paragraph{工具二：AI依賴與自我調節學習量表}
 
 包含AI使用態度分量表（12題）與SRL能力分量表（23題），採用Likert 5點量表。僅描述題構與施測流程，本計畫不報告建構效度與信度數值。
 
-	extbf{施測時間}：第6週（引導期末）、第12週（轉換期末）、第17週（自主期末），共三次施測。
+\textbf{施測時間}：第6週（引導期末）、第12週（轉換期末）、第17週（自主期末），共三次施測。
 
 \paragraph{短版量表說明} 為降低施測負擔並提升專注度，本計畫亦提供短版題構（總題數約16–20題），涵蓋目標設定、計畫監控、策略調整、反思與AI使用品質等核心面向；各時點施測時間控制於20分鐘內。
 
-\subsubsection{工具三：PBL專題評量規準}
+\paragraph{工具三：PBL專題評量規準}
 
 評量向度：程式碼正確性（30\%）、問題分析深度（25\%）、介面設計（20\%）、創意應用（15\%）、學習反思（10\%）。僅說明評分構面與規準設計，本計畫不報告評分者間信度數值。
 
-\subsubsection{工具四：AI互動紀錄}
+\paragraph{工具四：AI互動紀錄}
 
 學生互動資料之分析與分類，參考既有研究提出的架構\cite{prather2024weird}。
 
 \paragraph{日誌欄位設計} 問題類型、先嘗試步驟、AI提示摘要、採納或拒絕理由、修正重點與驗證方式（測試/輸入輸出檢查）。每週建議提交3–5筆紀錄，期中與期末彙整自我觀察。
 
-\subsubsection{工具五：學習反思報告}
+\paragraph{工具五：學習反思報告}
 
 每4週撰寫1次（共4次），質性分析採用主題分析法\cite{braun2006thematic}。
 
-\subsubsection{工具六：焦點團體訪談}
+\paragraph{工具六：焦點團體訪談}
 
 第12週進行2場訪談，每場6-8人，約60分鐘。
 
-\subsection{資料蒐集時程}
+\paragraph{資料蒐集時程}
 
 \begin{table}[h]
 \centering
@@ -92,9 +92,9 @@
 \end{tabular}
 \end{table}
 
-\subsection{資料分析方法}
+\paragraph{資料分析方法}
 
-\subsubsection{量化資料分析}
+\paragraph{量化資料分析}
 
 \begin{enumerate}
 \item \textbf{Python程式設計能力}（對應研究問題一）：描述統計、成對樣本t檢定、效果量Cohen's d（以「個體差異分數的標準差」為分母）。
@@ -102,28 +102,28 @@
 \item \textbf{AI互動行為}（對應研究問題三）：各週行為類型分布與比例，繪製「先嘗試後求助」趨勢線。
 \end{enumerate}
 
-\subsubsection{質性資料分析}
+\paragraph{質性資料分析}
 
 針對學習反思與訪談資料（研究問題四），採用主題分析法進行編碼與詮釋\cite{braun2006thematic}；雙人編碼30\%以提升一致性。
 
-\subsubsection{資料整合}
+\paragraph{資料整合}
 
 採用方法三角檢證，以\textit{joint display}呈現量化趨勢與質性脈絡，對照各階段鷹架與學習策略轉變。
 
-\subsection{介入忠誠度與誠信機制}
+\paragraph{介入忠誠度與誠信機制}
 \begin{itemize}
-	\item \textbf{介入忠誠度}:每週記錄提示模板使用率與教學步驟執行情況（教師/助教勾選），確保三階段設計一致。
-	\item \textbf{誠信機制}:期末專題須附「AI使用揭露」與「可重現性說明」，並提供最少3項測試證據（單元測試或輸入/輸出檢驗）。
+	\item \textbf{介入忠誠度}：每週記錄提示模板使用率與教學步驟執行情況（教師/助教勾選），確保三階段設計一致。
+	\item \textbf{誠信機制}：期末專題須附「AI使用揭露」與「可重現性說明」，並提供最少3項測試證據（單元測試或輸入/輸出檢驗）。
 \end{itemize}
 
-\subsection{立即行動（Try it）}
+\paragraph{立即行動（Try it）}
 \begin{enumerate}
 	\item 發放並使用「除錯/設計」提示模板，要求作業附三步驟思考紀錄。
 	\item 建立AI使用日誌表單，學生每週完成至少3筆紀錄並於課堂分享1則案例。
 	\item 期中前導入「錯誤類型卡」，引導學生以自我診斷框架進行除錯與反思。
 \end{enumerate}
 
-\subsection{研究倫理}
+\paragraph{研究倫理}
 
 \begin{enumerate}
 \item \textbf{知情同意}：開學第一週向學生說明研究目的與資料使用方式，學生簽署知情同意書
