--- a/sections/teaching_design.tex
+++ b/sections/teaching_design.tex
@@ -3,9 +3,9 @@
 %% 參、教學設計與規劃
 %% ============================================
 
-\section{教學設計與規劃}
+\subsection{教學設計與規劃}
 
-\subsection{教學理念與設計原則}
+\paragraph{教學理念與設計原則}
 
 本研究之教學設計以「AI鷹架漸退模式」為核心，融合三大理論框架：自我調節學習理論（Self-Regulated Learning，SRL）\cite{zimmerman2002becoming}、認知學徒制（Cognitive Apprenticeship）\cite{collins1989cognitive}與問題導向學習（Problem-Based Learning，PBL）\cite{savery2006overview}。設計原則如下：
 
@@ -25,7 +25,7 @@
 
 有研究將SRL定義為學習者主動設定目標、監控歷程、調整策略的循環過程\cite{zimmerman2002becoming}；亦有研究指出在科技輔助學習環境中，SRL能力是學習成功的關鍵預測因子\cite{azevedo2019using}。本課程透過學習反思報告、AI使用紀錄回顧等活動，引導學生發展後設認知能力。
 
-\subsection{課程架構概述}
+\paragraph{課程架構概述}
 
 本課程為期\textbf{18週}，每週\textbf{3小時}，共計\textbf{54小時}。課程設計分為兩大部分：
 
@@ -63,9 +63,9 @@
 \end{tabular}
 \end{table}
 
-\subsection{18週課程設計}
+\paragraph{18週課程設計}
 
-\subsubsection{第一階段：引導期（第1-6週）——Python基礎與AI學習策略}
+\paragraph{第一階段：引導期（1-6週）}
 
 \textbf{教學目標}：
 \begin{itemize}[leftmargin=2em]
@@ -107,7 +107,7 @@
 \end{tabular}
 \end{table}
 
-\subsubsection{第二階段：轉換期（第7-12週）——進階知識與問題解決}
+\paragraph{第二階段：轉換期（7-12週）}
 
 \textbf{教學目標}：
 \begin{itemize}[leftmargin=2em]
@@ -149,7 +149,7 @@
 \end{tabular}
 \end{table}
 
-\subsubsection{第三階段：自主期（第13-18週）——專題實作與自主學習}
+\paragraph{第三階段：自主期（13-18週）}
 
 \textbf{教學目標}：
 \begin{itemize}[leftmargin=2em]
@@ -190,7 +190,7 @@
 \end{tabular}
 \end{table}
 
-\subsection{每週課堂活動設計}
+\paragraph{每週課堂活動設計}
 
 每週3小時課程採用「課前-課中-課後」三段式設計：
 
@@ -215,11 +215,11 @@
 \item 撰寫AI使用紀錄與學習反思（每4週繳交一次正式報告）
 \end{itemize}
 
-\subsection{PBL任務設計}
+\paragraph{PBL任務設計}
 
 本課程PBL任務設計強調三大核心能力：「資料處理」、「資料視覺化」與「真實問題解決」。基礎練習題（如變數運算、迴圈練習、函式撰寫等）已融入每週課堂練習中，PBL任務則聚焦於具有挑戰性的應用問題。任務設計結合「Vibe Coding」理念——鼓勵學生以自然語言描述需求，透過與AI協作逐步實現程式功能，培養人機協作的程式開發能力。
 
-\subsubsection{核心技術能力培養}
+\paragraph{核心技術能力培養}
 
 本課程PBL任務涵蓋以下技術能力：
 
@@ -230,7 +230,7 @@
 \item \textbf{問題解決}：需求分析、演算法設計、程式實作、測試除錯
 \end{itemize}
 
-\subsubsection{臺灣開放資料應用}
+\paragraph{臺灣開放資料應用}
 
 本課程大量採用「政府資料開放平臺」（data.gov.tw）之公開資料集，讓學生處理真實、在地化的資料，提升學習動機與實用性。使用之資料集包括：
 
@@ -243,7 +243,7 @@
 \item 花蓮縣政府開放資料：在地觀光景點、活動資訊
 \end{itemize}
 
-\subsubsection{Vibe Coding教學策略}
+\paragraph{Vibe Coding教學策略}
 
 「Vibe Coding」強調以直覺、自然的方式與AI協作開發程式，本課程將此理念融入PBL任務：
 
@@ -253,7 +253,7 @@
 \item \textbf{自主期}：學生主導開發流程，AI僅作為諮詢對象，培養獨立解決問題能力
 \end{itemize}
 
-\subsubsection{PBL任務一覽}
+\paragraph{PBL任務一覽}
 
 \begin{longtable}{|c|m{3.2cm}|m{5cm}|m{4cm}|}
 \hline
@@ -287,7 +287,7 @@
 \caption{PBL任務設計一覽表}
 \end{longtable}
 
-\subsubsection{期末專題建議方向}
+\paragraph{期末專題建議方向}
 
 學生可從以下方向選擇期末專題主題，皆須包含資料處理與視覺化分析：
 
