--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -3,20 +3,21 @@
   \centering
   \vspace*{2cm}
   
-  {\Huge \textbf{教育部 115 年度教學實踐研究計畫}\\[1.5cm]}
+  {\large \textbf{教育部教學實踐研究計畫內容}\\[0.5cm]}
   
-  {\LARGE \textbf{計畫書}\\[2cm]}
+  {\large \textbf{Project Proposal for MOE Teaching Practice Research Program}\\[2cm]}
+
+  {\large \textbf{學門分類：}資訊科技類\\[0.5cm]}
+  
+  {\large \textbf{申請年度：}115年度 \hspace{1em} $\boxtimes$ 一年期 \hspace{1em} $\square$ 多年期\\[2.5cm]}
   
   {\LARGE \textbf{計畫名稱}\\[0.8cm]}
-  
-  {\Large \textbf{\textcolor{blue}{從「依賴」到「賦能」：自我調節學習導向之 AI 鷹架撤除模式——在非資訊背景學生程式教育之應用}}\\[1.5cm]}
-  
-  {\large \textbf{學門分類:資訊科技類}\\[3cm]}
-  
+  {\Large \textbf{\textcolor{blue}{從「依賴」到「賦能」：自我調節學習導向之 AI 鷹架撤除模式——在非資訊背景學生程式教育之應用}}\\[3cm]}
+
   {\large
-  \textbf{計畫主持人:} 陳文盛 助理教授\\[0.5cm]
-  \textbf{執行機構:} 國立東華大學 通識教育中心\\[0.5cm]
-  \textbf{執行期間:} 115 年 8 月 1 日至 116 年 7 月 31 日(一年期)\\
+  \textbf{計畫主持人：} 陳文盛 助理教授\\[0.5cm]
+  \textbf{執行機構：} 國立東華大學 通識教育中心\\[0.5cm]
+  \textbf{計畫申請日期(Filing Date)：} 114 年 12 月 1 日\\
   }
   
   \vfill
