--- a/main.tex
+++ b/main.tex
@@ -12,12 +12,13 @@
 \date{\today}
 \begin{document}
 \input{frontmatter/titlepage}
+\input{sections/pi}
 \input{sections/introduction}
 \input{sections/literature}
 \input{sections/teaching_design}
 \input{sections/research_plan}
 \input{sections/outcomes}
- 
+
 \printbibliography[title=參考文獻]
     
-\end{document} 
+\end{document}       
