--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-@book{guzdial2015learner,
+﻿@book{guzdial2015learner,
   author = {Guzdial, Mark},
   title = {Learner-Centered Design of Computing Education: Research on Computing for Everyone},
   year = {2015},
