--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,7 +1,9 @@
 
-\section{研究動機與背景}
+\section{計畫執行內容}
 
-\subsection{教學問題脈絡}
+\subsection{研究動機與背景}
+
+\subsubsection{教學問題脈絡}
 
 隨著人工智慧技術的普及，程式設計能力已成為21世紀公民的基本素養，
 運算思維(Computational Thinking)更被視為跨領域問題解決的核心能力\cite{wing2006computational}。
@@ -9,13 +11,13 @@
 旨在培養非資訊科系學生的運算思維與程式設計能力。
 然而，教學實踐中面臨三大核心挑戰：
 
-	extbf{挑戰一：學習困難與高挫折率}
+\textbf{挑戰一：學習困難與高挫折率}
 
 113學年度課程資料顯示，62\%學生反映初期學習困難，期中考僅47\%及格，且僅31\%學生能獨立完成期末專題。
 非資訊背景學生在學習程式設計時面臨多重障礙，包括抽象概念理解困難、語法錯誤頻繁、
 缺乏問題分解能力等\cite{guzdial2015learner,qian2017misconceptions}。
 
-	extbf{挑戰二：生成式AI帶來的認知卸載危機}
+\textbf{挑戰二：生成式AI帶來的認知卸載危機}
 
 ChatGPT、GitHub Copilot等生成式AI工具能夠快速生成完整程式碼\cite{finnieansley2022robots,denny2023conversing}，
 為程式設計教育帶來前所未有的機會與挑戰\cite{becker2023programming}。
@@ -24,72 +26,72 @@ ChatGPT、GitHub Copilot等生成式AI工具能夠快速生成完整程式碼\ci
 研究顯示，當學生直接複製AI生成的程式碼而不加修改時，92\%會接受錯誤答案\cite{prather2024weird}，
 且在後續獨立解題時表現顯著下降\cite{finnieansley2023exam}。
 
-\textbf{挑戰三:傳統教學方法的侷限}
+\textbf{挑戰三：傳統教學方法的侷限}
 
 傳統的「講述-練習」教學模式難以有效支持學生建立自主學習能力。
-教師難以即時診斷每位學生的學習困難,也無法提供個別化的學習支持\cite{hmelo2004problem}。
-此外,國內針對非資訊科系學生的程式設計教學研究也指出,
+教師難以即時診斷每位學生的學習困難，也無法提供個別化的學習支持\cite{hmelo2004problem}。
+此外，國內針對非資訊科系學生的程式設計教學研究也指出，
 單向講授模式不利於培養學生的運算思維與問題解決能力\cite{lin2021teaching,lai2020analysis}。
 
-\subsection{傳統教學方法說明}
+\subsubsection{傳統教學方法說明}
 
-過去本課程採用以下教學方法:
+過去本課程採用以下教學方法：
 
 \begin{enumerate}
-\item \textbf{講述法為主}:教師透過投影片講解程式概念與語法,學生被動接收知識。
-\item \textbf{範例示範}:教師示範程式碼撰寫過程,學生模仿練習。
-\item \textbf{課後作業}:指派固定題目供學生練習,但缺乏即時回饋機制。
-\item \textbf{AI工具使用方式}:允許學生自由使用ChatGPT等工具,但未提供使用指引或限制。
+\item \textbf{講述法為主}：教師透過投影片講解程式概念與語法，學生被動接收知識。
+\item \textbf{範例示範}：教師示範程式碼撰寫過程，學生模仿練習。
+\item \textbf{課後作業}：指派固定題目供學生練習，但缺乏即時回饋機制。
+\item \textbf{AI工具使用方式}：允許學生自由使用ChatGPT等工具，但未提供使用指引或限制。
 \end{enumerate}
 
-此模式的主要問題:
+此模式的主要問題：
 \begin{itemize}
 \item 學生缺乏主動探索與問題解決的機會
 \item 無法培養自我調節學習能力
-\item AI工具使用缺乏教學設計,導致過度依賴
+\item AI工具使用缺乏教學設計，導致過度依賴
 \item 評量方式難以區分學生真實能力與AI協助程度
 \end{itemize}
 
-\subsection{改進方向與預期效益}
+\subsubsection{改進方向與預期效益}
 
-有鑑於此,本研究提出「AI鷹架漸退式教學模式」(AI Scaffolding Fading Model),
+有鑑於此，本研究提出「AI鷹架漸退式教學模式」(AI Scaffolding Fading Model)，
 結合自我調節學習理論(Self-Regulated Learning, SRL)\cite{zimmerman2002becoming,azevedo2019using}
-與問題導向學習(Problem-Based Learning, PBL)\cite{savery2006overview,hmelo2004problem},
+與問題導向學習(Problem-Based Learning， PBL)\cite{savery2006overview,hmelo2004problem}，
 將AI從「答案提供者」轉變為「學習鷹架」。
-此教學設計參考認知學徒制(Cognitive Apprenticeship)中的鷹架理論\cite{collins1989cognitive,wood1976role},
-透過逐步減少外部支持,促進學生建立內在學習策略與自主學習能力\cite{jarvela2015enhancing}。
+此教學設計參考認知學徒制(Cognitive Apprenticeship)中的鷹架理論\cite{collins1989cognitive,wood1976role}，
+透過逐步減少外部支持，促進學生建立內在學習策略與自主學習能力\cite{jarvela2015enhancing}。
 
-\textbf{研究創新性}:有別於現有研究多聚焦於AI工具對學習成效的影響\cite{kazemitabaar2023studying,kazemitabaar2024codeaid},
-本研究首次提出系統化的AI鷹架漸退機制,並結合學習歷程資料分析,
-探討如何透過教學設計引導學生從「AI依賴」轉向「AI協作」,最終達到「自主學習」。
+\textbf{研究創新性}：有別於現有研究多聚焦於AI工具對學習成效的影響\cite{kazemitabaar2023studying,kazemitabaar2024codeaid}，
+本研究首次提出系統化的AI鷹架漸退機制，並結合學習歷程資料分析，
+探討如何透過教學設計引導學生從「AI依賴」轉向「AI協作」，最終達到「自主學習」。
 
-\textbf{核心理念}:透過三階段AI鷹架漸退設計:
+\textbf{核心理念}：透過三階段AI鷹架漸退設計：
 \begin{enumerate}
-\item \textbf{引導期}(1-6週):高度結構化AI提示,引導學生思考
-\item \textbf{轉換期}(7-12週):部分鷹架移除,鼓勵學生先嘗試
-\item \textbf{自主期}(13-18週):最小化AI介入,學生主導學習
+\item \textbf{引導期}(1-6週)：高度結構化AI提示，引導學生思考
+\item \textbf{轉換期}(7-12週)：部分鷹架移除，鼓勵學生先嘗試
+\item \textbf{自主期}(13-18週)：最小化AI介入，學生主導學習
 \end{enumerate}
 
-\textbf{預期效益}:
+\textbf{預期效益}：
 \begin{itemize}
-\item 提升學生程式設計學習成效與自我效能,促進內在學習動機\cite{ryan2000selfdetermination}
-\item 降低AI過度依賴,培養自我調節學習能力
-\item 發展有效的AI輔助教學模式,可推廣至其他課程
+\item 提升學生程式設計學習成效與自我效能，促進內在學習動機\cite{ryan2000selfdetermination}
+\item 降低AI過度依賴，培養自我調節學習能力
+\item 發展有效的AI輔助教學模式，可推廣至其他課程
 \item 探索AI工具在教育中的負責任使用方式\cite{dignum2019responsible}
 \end{itemize}
 
-\subsection{執行策略與立即行動}
+\subsubsection{執行策略與立即行動}
 
 為確保教學設計可落地且可檢核，本研究提出可即刻採用的教學與評量步驟，著重於「先思考、後求助、再驗證」。
 
-	extbf{教學步驟（三階段）}:
+\textbf{教學步驟（三階段）}：
 \begin{enumerate}
-	\item \textbf{引導期（1–6週）}:提供兩套固定提示模板（除錯/設計），要求學生在使用AI前先完成「問題描述→嘗試步驟→預期輸出」三步。
-	\item \textbf{轉換期（7–12週）}:降低提示結構，改用「標題+步驟」簡化模板，導入「錯誤類型卡」（語法、邏輯、邊界、資料結構）協助自我診斷；期中小專題。
-	\item \textbf{自主期（13–18週）}:學生自訂提示模板，於期末專題中附上「AI使用揭露」與「可重現性說明」（含測試證據）。
+	\item \textbf{引導期（1–6週）}：提供兩套固定提示模板（除錯/設計），要求學生在使用AI前先完成「問題描述→嘗試步驟→預期輸出」三步。
+	\item \textbf{轉換期（7–12週）}：降低提示結構，改用「標題+步驟」簡化模板，導入「錯誤類型卡」（語法、邏輯、邊界、資料結構）協助自我診斷；期中小專題。
+	\item \textbf{自主期（13–18週）}：學生自訂提示模板，於期末專題中附上「AI使用揭露」與「可重現性說明」（含測試證據）。
 \end{enumerate}
 
-	extbf{評量與紀錄}:
+\textbf{評量與紀錄}：
 \begin{itemize}
 	\item 前後測：第2週/第17週施測，題型涵蓋控制流程、資料結構、函式、測試。
 	\item 量表：第6/12/17週施測短版SRL與AI使用量表（每構面4–6題）。
@@ -97,7 +99,7 @@ ChatGPT、GitHub Copilot等生成式AI工具能夠快速生成完整程式碼\ci
 	\item 反思：每4週撰寫150–200字，採「一錯一改」架構。
 \end{itemize}
 
-	extbf{Try it（本週即可執行）}:
+\textbf{Try it（本週即可執行）}：
 \begin{enumerate}
 	\item 發放「除錯/設計」提示模板，要求學生本週作業皆附三步驟思考紀錄。
 	\item 設定AI使用日誌表單，每位學生至少提交3筆互動紀錄。
@@ -111,7 +113,7 @@ ChatGPT、GitHub Copilot等生成式AI工具能夠快速生成完整程式碼\ci
   \label{fig:framework}
 \end{figure}
 
-\subsection{研究問題}
+\subsubsection{研究問題}
 
 本研究擬探討以下四個核心問題：
 
