Fix LaTeX errors: infinite glue shrinkage, overfull hbox, CJK monofont

--- a/sections/outcomes.tex
+++ b/sections/outcomes.tex
@@ -7,135 +7,78 @@
 
 \paragraph{研究執行時程}
 
-\begin{longtable}{|c|m{6cm}|m{5.5cm}|}
+\begin{table}[htbp]
+\centering
+\caption{研究執行時程}
+\renewcommand{\arraystretch}{1.4}
+\begin{tabular}{|c|p{6cm}|p{5cm}|}
 \hline
 \textbf{期程} & \textbf{工作項目} & \textbf{預期產出} \\
 \hline
-\endfirsthead
+\multicolumn{3}{|c|}{\textbf{準備階段（115年8月--116年1月）}} \\
 \hline
-\textbf{期程} & \textbf{工作項目} & \textbf{預期產出} \\
-\hline
-\endhead
-\multicolumn{3}{|c|}{\textbf{準備階段（115年8月-116年1月）}} \\
-\hline
-115年8-9月 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-$\bullet$ 開發AI學習平台\\
-$\bullet$ 製作18週課程教材
-\vspace{1mm}
-\end{minipage}
+115年8--9月 & 
+\textbullet~開發AI學習平台\newline
+\textbullet~製作18週課程教材
 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-AI平台beta版\\
-教材初稿
-\vspace{1mm}
-\end{minipage} \\
+AI平台beta版\newline
+教材初稿 \\
 \hline
-115年10-12月 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-$\bullet$ 研究工具預試與修訂\\
-$\bullet$ AI平台測試\\
-$\bullet$ 教材專家審查
-\vspace{1mm}
-\end{minipage}
+115年10--12月 & 
+\textbullet~研究工具預試與修訂\newline
+\textbullet~AI平台測試\newline
+\textbullet~教材專家審查
 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-驗證後研究工具\\
-AI平台正式版\\
-教材定稿
-\vspace{1mm}
-\end{minipage} \\
+驗證後研究工具\newline
+AI平台正式版\newline
+教材定稿 \\
 \hline
 116年1月 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-$\bullet$ 課程網站建置\\
-$\bullet$ 施測準備
-\vspace{1mm}
-\end{minipage}
+\textbullet~課程網站建置\newline
+\textbullet~施測準備
 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-課程網站上線\\
-施測流程確認
-\vspace{1mm}
-\end{minipage} \\
+課程網站上線\newline
+施測流程確認 \\
 \hline
-\multicolumn{3}{|c|}{\textbf{實施階段（116年2月-6月）}} \\
+\multicolumn{3}{|c|}{\textbf{實施階段（116年2月--6月）}} \\
 \hline
-116年2-3月 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-$\bullet$ 執行引導期教學（1-6週）\\
-$\bullet$ 前測、第一次量表施測、反思報告(1)
-\vspace{1mm}
-\end{minipage}
+116年2--3月 & 
+\textbullet~執行引導期教學（1--6週）\newline
+\textbullet~前測、第一次量表施測、反思報告(1)
 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-前測資料\\
-第一次量表資料\\
-反思報告(1)
-\vspace{1mm}
-\end{minipage} \\
+前測資料\newline
+第一次量表資料\newline
+反思報告(1) \\
 \hline
 116年4月 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-$\bullet$ 執行轉換期教學（7-12週）\\
-$\bullet$ 第二次量表施測、訪談、期中專題
-\vspace{1mm}
-\end{minipage}
+\textbullet~執行轉換期教學（7--12週）\newline
+\textbullet~第二次量表施測、訪談、期中專題
 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-第二次量表資料\\
-訪談逐字稿\\
-期中專題成果
-\vspace{1mm}
-\end{minipage} \\
+第二次量表資料\newline
+訪談逐字稿\newline
+期中專題成果 \\
 \hline
-116年5-6月 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-$\bullet$ 執行自主期教學（13-18週）\\
-$\bullet$ 後測、第三次量表施測、期末專題
-\vspace{1mm}
-\end{minipage}
+116年5--6月 & 
+\textbullet~執行自主期教學（13--18週）\newline
+\textbullet~後測、第三次量表施測、期末專題
 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-後測資料\\
-第三次量表資料\\
-期末專題成果
-\vspace{1mm}
-\end{minipage} \\
+後測資料\newline
+第三次量表資料\newline
+期末專題成果 \\
 \hline
-\multicolumn{3}{|c|}{\textbf{分析撰寫階段（116年6-7月）}} \\
+\multicolumn{3}{|c|}{\textbf{分析撰寫階段（116年6--7月）}} \\
 \hline
-116年6-7月 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-$\bullet$ 資料分析\\
-$\bullet$ 撰寫研究報告\\
-$\bullet$ 製作教學資源
-\vspace{1mm}
-\end{minipage}
+116年6--7月 & 
+\textbullet~資料分析\newline
+\textbullet~撰寫研究報告\newline
+\textbullet~製作教學資源
 & 
-\begin{minipage}[t]{\linewidth}
-\vspace{1mm}
-成果報告\\
-論文初稿\\
-教學資源包
-\vspace{1mm}
-\end{minipage} \\
+成果報告\newline
+論文初稿\newline
+教學資源包 \\
 \hline
-\caption{研究執行時程}
-\end{longtable}
+\end{tabular}
+\end{table}
 
 \paragraph{預期具體成果與KPI}
 
