--- a/sections/research_plan.tex
+++ b/sections/research_plan.tex
@@ -7,7 +7,7 @@
 
 \paragraph{研究設計}
 
-本研究採用\textbf{單組前後測準實驗設計}（one-group pretest-posttest quasi-experimental design），參考研究方法學相關論述\cite{creswell2018research}，並以混合方法整合量化與質性資料。分析策略以簡潔可操作為原則，著重核心指標與可重現流程。
+本研究採用\textbf{單組前後測準實驗設計}（one-group pretest-posttest quasi-experi\-mental design），參考研究方法學相關論述\cite{creswell2018research}，並以混合方法整合量化與質性資料。分析策略以簡潔可操作為原則，著重核心指標與可重現流程。
 
 \paragraph{研究問題}
 
