--- a/sections/teaching_design.tex
+++ b/sections/teaching_design.tex
@@ -255,15 +255,15 @@
 
 \paragraph{PBL任務一覽}
 
-\begin{longtable}{|c|m{3.2cm}|m{5cm}|m{4cm}|}
+\begin{table}[htbp]
+\centering
+\caption{PBL任務設計一覽表}
+\renewcommand{\arraystretch}{1.3}
+\small
+\begin{tabular}{|c|p{2.8cm}|p{5cm}|p{3.8cm}|}
 \hline
 \textbf{週次} & \textbf{PBL任務名稱} & \textbf{任務說明} & \textbf{技術重點} \\
 \hline
-\endfirsthead
-\hline
-\textbf{週次} & \textbf{PBL任務名稱} & \textbf{任務說明} & \textbf{技術重點} \\
-\hline
-\endhead
 \multicolumn{4}{|c|}{\textbf{引導期：結構化AI協作任務}} \\
 \hline
 6 & 花蓮空氣品質監測儀表板 & 讀取環境部AQI資料，根據空氣品質等級提供健康建議，並繪製AQI趨勢圖 & 資料處理、條件判斷、Matplotlib折線圖 \\
@@ -274,7 +274,7 @@
 \hline
 10 & 臺灣人口結構視覺化分析 & 讀取內政部人口統計CSV，分析各縣市人口結構、年齡分布，產生多種統計圖表 & CSV處理、Pandas資料分析、多圖表繪製 \\
 \hline
-11-12 & 期中專題：在地生活資料應用 & 整合至少兩種開放資料，進行資料處理與視覺化分析，解決在地生活問題 & 多元資料整合、資料視覺化、小組協作 \\
+11--12 & 期中專題：在地生活資料應用 & 整合至少兩種開放資料，進行資料處理與視覺化分析，解決在地生活問題 & 多元資料整合、資料視覺化、小組協作 \\
 \hline
 \multicolumn{4}{|c|}{\textbf{自主期：獨立專題開發任務}} \\
 \hline
@@ -282,10 +282,10 @@
 \hline
 14 & 地震資料分析與視覺化系統 & 串接氣象署地震開放資料，分析地震分布規律，繪製地震規模統計圖 & API串接、OOP概念、散佈圖與統計分析 \\
 \hline
-15-18 & 期末專題：自選主題 & 自選臺灣開放資料主題，完成資料蒐集、處理、分析與視覺化呈現 & 完整資料分析流程、全方位知識整合 \\
+15--18 & 期末專題：自選主題 & 自選臺灣開放資料主題，完成資料蒐集、處理、分析與視覺化呈現 & 完整資料分析流程、全方位知識整合 \\
 \hline
-\caption{PBL任務設計一覽表}
-\end{longtable}
+\end{tabular}
+\end{table}
 
 \paragraph{期末專題建議方向}
 
