--- a/twsetup.sty
+++ b/twsetup.sty
@@ -9,6 +9,7 @@
   \setmainfont{Times New Roman}
   \setCJKmainfont{Microsoft JhengHei}
   \setCJKsansfont{Microsoft JhengHei}
+  \setCJKmonofont{Microsoft JhengHei}
   \setCJKfamilyfont{kai}{DFKai-SB}
   \newcommand{\kai}[1]{{\CJKfamily{kai}#1}}
   % Alternative (uncomment if you prefer Noto fonts)
