改進：簡化分析方法、增補一鍵分析腳本與完整表單範本，提升Python可執行性與報告簡潔度。詳見IMPROVEMENTS_SUMMARY.md。

--- a/sections/research_plan.tex
+++ b/sections/research_plan.tex
@@ -7,7 +7,7 @@
 
 \paragraph{研究設計}
 
-本研究採用\textbf{單組前後測準實驗設計}（one-group pretest-posttest quasi-experi\-mental design），參考研究方法學相關論述\cite{creswell2018research}，並以混合方法整合量化與質性資料。分析策略以簡潔可操作為原則，著重核心指標與可重現流程。
+本研究採用\textbf{前後測對比設計}（pre-post comparison design），參考研究方法學相關論述\cite{creswell2018research}，整合量化與質性資料。分析策略著重可操作性與可重現性。
 
 \paragraph{研究問題}
 
@@ -43,7 +43,7 @@
 
 \textbf{施測時間}：第6週（引導期末）、第12週（轉換期末）、第17週（自主期末），共三次施測。
 
-\paragraph{短版量表說明} 為降低施測負擔並提升專注度，本計畫亦提供短版題構（總題數約16–20題），涵蓋目標設定、計畫監控、策略調整、反思與AI使用品質等核心面向；各時點施測時間控制於20分鐘內。
+\paragraph{短版量表說明} 為降低施測負擔並提升完測率,本計畫三時點皆採用短版題構(總題數16–20題),涵蓋目標設定、計畫監控、策略調整、反思與AI使用品質等核心面向;施測時間控制於15分鐘內,計算各構念總分以簡化後續分析。
 
 \paragraph{工具三：PBL專題評量規準}
 
@@ -97,18 +97,18 @@
 \paragraph{量化資料分析}
 
 \begin{enumerate}
-\item \textbf{Python程式設計能力}（對應研究問題一）：描述統計、成對樣本t檢定、效果量Cohen's d（以「個體差異分數的標準差」為分母）。
-\item \textbf{AI依賴與SRL能力轉變}（對應研究問題二）：針對第6、12、17週三個施測時點之量表資料，以Friedman檢定檢驗整體趨勢，必要時以Kendall's W呈現一致性。
-\item \textbf{AI互動行為}（對應研究問題三）：各週行為類型分布與比例，繪製「先嘗試後求助」趨勢線。
+\item \textbf{Python程式設計能力}（對應研究問題一）：前後測分數比較、paired t-test、效果量Cohen's d。
+\item \textbf{AI依賴與SRL能力轉變}（對應研究問題二）：三時點量表資料（第6、12、17週），使用Friedman test檢驗趨勢變化；計算各構念總分以簡化分析。
+\item \textbf{AI互動行為}（對應研究問題三）：以「先嘗試後求助」比例為核心指標，依三階段（引導/轉換/自主）統計平均值與變化趨勢；另統計問題類型分布（debugging/design/optimization）。
 \end{enumerate}
 
 \paragraph{質性資料分析}
 
-針對學習反思與訪談資料（研究問題四），採用主題分析法進行編碼與詮釋\cite{braun2006thematic}；雙人編碼30\%以提升一致性。
+針對學習反思與訪談資料（研究問題四），採用主題分析法（thematic analysis）\cite{braun2006thematic}；聚焦三主題（自我調節、AI依賴、學習策略），雙人編碼並報告一致性（Cohen's Kappa或文字說明）。
 
 \paragraph{資料整合}
 
-採用方法三角檢證，以\textit{joint display}呈現量化趨勢與質性脈絡，對照各階段鷹架與學習策略轉變。
+採用三角檢證法（triangulation），以圖表呈現量化趨勢並搭配質性引文，對照各階段學習策略轉變。
 
 \paragraph{介入忠誠度與誠信機制}
 \begin{itemize}
